CKA/service-networking/Q13/assets/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: backend
spec: {}
status: {}
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: frontend
  labels:
    kubernetes.io/metadata.name: frontend
spec: {}
status: {}
